[gd_scene load_steps=7 format=3 uid="uid://07ueak18h10d"]

[ext_resource type="Script" uid="uid://db10n8kfsbm2i" path="res://scripts/planets/base_planet.gd" id="1_7bwmi"]
[ext_resource type="PackedScene" uid="uid://b6f77857cqd1g" path="res://scenes/core/orbit.tscn" id="2_7bwmi"]
[ext_resource type="AudioStream" uid="uid://cy3fvilhasf1a" path="res://assets/audio/capture.wav" id="3_qu5ch"]
[ext_resource type="AudioStream" uid="uid://cjmu4ey2flrf7" path="res://assets/audio/pulse.wav" id="4_7bwmi"]

[sub_resource type="Gradient" id="Gradient_ojvo4"]
offsets = PackedFloat32Array(0, 0.28666666, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.7, 0.7, 0.7, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qu5ch"]
gradient = SubResource("Gradient_ojvo4")
width = 32
height = 32
fill_from = Vector2(0, 1)

[node name="Planet" type="Node2D" groups=["planets"]]
script = ExtResource("1_7bwmi")

[node name="Orbit" parent="." instance=ExtResource("2_7bwmi")]

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
icon = SubResource("GradientTexture2D_qu5ch")

[node name="CaptureBar" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="CaptureSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qu5ch")
volume_db = -23.0

[node name="ShipDestroyedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7bwmi")
volume_db = -20.0
